--- a/.github/workflows/ci_pytest.yml
+++ b/.github/workflows/ci_pytest.yml
@@ -1,6 +1,10 @@
 name: Book Management Test CI Pipeline
 
 on:
+  push:
+    branches:
+      - main
+
   pull_request:
     branches:
       - main  # Trigger CI on pull requests to the main branch
