--- a/.github/workflows/ci_pytest.yml
+++ b/.github/workflows/ci_pytest.yml
@@ -17,12 +17,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.9"  # Use Python 3.9
+          python-version: "3.12"  # Use Python 3.9
 
       - name: Install Dependencies
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest
 
       - name: Run Pytest
         run: |
