Update deploy.yml and added sudo permission

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,19 +33,19 @@ jobs:
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io
 
             # Add the SSH user to the Docker group
-            sudo usermod -aG docker ${{ secrets.HOSTNAME }}
-
+            sudo usermod -aG docker ubuntu
+            
             # Install Docker Compose
             sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
 
             # Verify installations
-            docker --version
-            docker-compose --version
+            sudo docker --version
+            sudo docker-compose --version
 
             # Navigate to the project directory and deploy
             cd /home/ubuntu/
             git clone https://github.com/Humaidu/fastapi-book-project.git
             cd fastapi-book-project/
             git pull
-            docker-compose up -d --build
+            sudo docker-compose up -d --build
